<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.main.MainFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAB_add_Meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="60dp"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
...
